[main]: fix name and seo config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,15 @@ import { Footer } from '@component/index';
 import { Layout } from '@layout/index';
 ---
 
-<Layout title="Astro PWA Starter">
+<Layout title="Astro Vue PWA Boilerplate">
   <section class="p-6 flex-1 flex flex-col justify-between">
     <!-- Welcome -->
     <div
       class="max-w-xl mx-auto flex flex-col justify-center flex-1 space-y-10">
       <div class="space-y-2 text-center">
-        <h1 class="text-xl font-semibold">🟢 Astro PWA Vue3 de Culqi</h1>
+        <h1 class="text-xl font-semibold"
+          >🟢 Astro Vue PWA Boilerplate de Culqi</h1
+        >
         <p class="italic"> ¡Bienvenidos a la página principal del proyecto! </p>
       </div>
       <div>
