[main]: fix es lint config

--- a/src/module/components/Footer/Footer.astro
+++ b/src/module/components/Footer/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { Button } from '@component/Button';
+import { CqButton } from '@component/CqButton';
 
 // Aquí puedes incluir cualquier lógica JavaScript necesaria.
 // En este caso, el componente es puramente estático, por lo que no hay lógica.
@@ -7,7 +7,7 @@ import { Button } from '@component/Button';
 
 <footer class="py-[20px]">
   <div class="max-w-[90%] grid grid-cols-2 gap-[16px] my-0 mx-auto">
-    <Button label="Reportes" />
-    <Button label="Cerrar caja" />
+    <CqButton label="Reportes" />
+    <CqButton label="Cerrar caja" />
   </div>
 </footer>
